style.css
body {
  font-family: sans-serif;
  background-color: #ffffff;
  color: rgb(0, 0, 0);
  font-size: 16px;
  line-height: 20px;
}

a {
  color: rgb(0, 119, 255);
}

.header {
  height: 50px;
  background-color: #ffffff;
  color: rgb(0, 0, 0);
  line-height: 50px;
  text-align: center;
  margin: 30px;
}

.latestProjects {
  display: grid;
  text-align: center;
  align-items: center;
  justify-content: center;
}

.sectionHeader {
  text-align: center;
  align-items: center;
  justify-content: center;
  padding-top: 25px;
}

.summary {
  margin-left: 30px;
  margin-right: 30px;
}

.skills {
  padding: 30px;
  margin-right: 30px;
  margin-left: 30px;
  column-count: 2;
}

.resources {
  text-align: center;
}

.resources ul {
  margin-top: 30px;
  text-align: center;
}

.resources li {
  float: none;
  display: inline-flex;
  text-align: center;
  margin-right: 6%;
  list-style: none;
  font-weight: 400;
}

.footer {
  padding: 10px;
  width: 100%;
  text-align: center;
  background-color: #ffffff;
}

.divider {
  position: relative;
  height: 1px;
}

.div-transparent:before {
  content: "";
  position: absolute;
  top: 0;
  left: 5%;
  right: 5%;
  width: 90%;
  height: 1px;
  background-image: linear-gradient(to right, transparent, rgb(48, 49, 51), transparent);
}

